--- a/src/Pages/profile/InterviewerProfile.css
+++ b/src/Pages/profile/InterviewerProfile.css
@@ -1,24 +1,42 @@
 .interviewer-profile-container {
-    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
   
   .profile-details {
     border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
+    border-radius: 10px;
+    padding: 60px; /* Increase the padding */
     background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   .profile-info {
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
   
-  .avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-top: 10px;
+  .profile-info input {
+    margin-bottom: 30px; /* Increase the margin */
+    padding: 20px 60px; /* Increase the padding */
+    border: 1px solid #ccc;
+    font-size: 18px; /* Increase the font size */
+    width: fit-content;
+    border-radius: 8px; /* Increase the border-radius */
+  }
+  
+  .profile-info button {
+    padding: 12px 24px; /* Increase the padding */
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 8px; /* Increase the border-radius */
+    cursor: pointer;
+  }
+  
+  .profile-info button:hover {
+    background-color: #0056b3;
   }
   
