--- a/src/Pages/profile/InterviewerProfile.css
+++ b/src/Pages/profile/InterviewerProfile.css
@@ -1,5 +1,7 @@
 .interviewer-profile-container {
     display: flex;
+    
+    flex-grow: 1;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -19,20 +21,20 @@
   }
   
   .profile-info input {
-    margin-bottom: 30px; /* Increase the margin */
-    padding: 20px 60px; /* Increase the padding */
+    margin-bottom: 30px; 
+    padding: 20px 60px; 
     border: 1px solid #ccc;
-    font-size: 18px; /* Increase the font size */
+    font-size: 18px;
     width: fit-content;
-    border-radius: 8px; /* Increase the border-radius */
+    border-radius: 8px;
   }
   
   .profile-info button {
-    padding: 12px 24px; /* Increase the padding */
+    padding: 12px 24px;
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 8px; /* Increase the border-radius */
+    border-radius: 8px; 
     cursor: pointer;
   }
   
