Interviewer profile page updated

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -78,3 +78,6 @@ a[title]:hover:after {
   color: #a35d5d !important;
   transition: all 0.4s ease-in-out;
 }
+.SideNavbarMenu:hover {
+  display: none;
+}
